dotnet-webapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: webapp
