dotnet-webapp/base/virtual-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "*"
      http:
        paths:
          - path: /webapp
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 80
